Fixed up the XS image sizes on mobile.

--- a/themes/ejangi/assets/scss/_articles.scss
+++ b/themes/ejangi/assets/scss/_articles.scss
@@ -184,11 +184,15 @@ figure {
     }
 
     &.xs img {
-        max-width: $width-xs;
+        @media (min-width: $width-xs) {
+            max-width: $width-xs;
+        }
     }
 
     &.small img {
-        max-width: $width-sm;
+        @media (min-width: $width-sm) {
+            max-width: $width-sm;
+        }
     }
 
     figcaption {
